<resources>
    <string name="app_name">Pigeon Pass</string>

    <string name="next">Next</string>
    <string name="tips">Tips</string>
    <string name="export_history">Export History</string>
    <string name="export_history_2">Export History*</string>
    <string name="transfer_list">Receive List</string>
    <string name="transfer_list_2">Receive List*</string>
    <string name="not_close_window">Do not exit or turn off screen: %s</string>
    <string name="no_received_files">No files received</string>
    <string name="send_list">Send List</string>
    <string name="my_droid_mode_receiver">Send to phone</string>
    <string name="my_droid_mode_send">Receive from phone</string>
    <string name="my_droid_mode_middle">Transfer</string>
    <string name="my_droid_mode_none">None</string>
    <string name="my_droid_mode_image">Image browsing</string>
    <string name="my_droid_mode_video">Video on demand</string>
    <string name="send_files_to_html">Send files to HTML</string>
    <string name="unknown_size">Unknown Size</string>
    <string name="new_webpage_access">%s New Webpage Access!</string>
    <string name="success_message">Success!</string>
    <string name="server_error_exception">Server Exception Error</string>
    <string name="send_file_start">Send File Start.</string>
    <string name="send_file_end">Send File End.</string>
    <string name="file_not_exist">File does not exist</string>
    <string name="file_not_received">File not received.</string>
    <string name="chunk_receiver_error">chunk receiver error.</string>
    <string name="error_merge_chunk_params">Error merge chunk params.</string>
    <string name="no_chunks">No chunks?</string>
    <string name="chunks_number_not_match">Chunks number not match.</string>
    <string name="file_merge_success">File merge completed and verified.</string>
    <string name="md5_check_failed">MD5 check failed.</string>
    <string name="clear_up">Clear up</string>
    <string name="invalid_request_from_appserver">Invalid request from AppServer</string>
    <string name="mydroid_running_only_for_alive">Pigeon Pass- running only for alive</string>
    <string name="import_to_send_list_hint">Please tap \"Import to send list\" instead of \"Share\"!</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="delete">delete</string>
    <string name="export">Export</string>
    <string name="export_and_delete">Export &amp; Delete</string>
    <string name="import_to_send_list">Import to send list</string>
    <string name="already_in_sending_list">Already exists in the send list.</string>
    <string name="save_failed">Save failed!</string>
    <string name="save_to_success">Saved to %s successfully!</string>
    <string name="keep_recent_records">Keep only the last 80–100 export records.</string>
    <string name="storage_remaining"> Storage Remaining:</string>
    <string name="file_received_success_fmt">File received successfully: %s!</string>
    <string name="connect_wifi_or_hotspot">Please connect to WI-FI or enable hotspot</string>
    <string name="lan_access_fmt">Local network access: %1$s:%2$s</string>
    <string name="auto_proceed_fmt">Will automatically proceed in %d s. You can click cancel to deselect some files.</string>
    <string name="select_files_hint">Please select files.</string>
    <string name="empty_file_prompt">No files yet. Share from gallery, file manager or other apps.</string>
    <string name="app_management_permission">App Management Permission</string>
    <string name="global_permission_prompt">This feature requires system settings permission. Redirecting to enable it.</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_content">Files from system gallery/file manager are only parsed for name/size without copying. Files from other apps are temporarily cached and deleted after use.\nYou need to re-share imports when app restarts.</string>
    <string name="action_confirm">Got it</string>
    <string name="action_auto_next">Auto Next</string>
    <string name="exit_with_wifi_reminder">Click to exit. Please connect to WI-FI or enable hotspot, then enter again.</string>
    <string name="transfer_list_title">Transfer List</string>
    <string name="file_send">File Send</string>
    <string name="app_file_send">File Send</string>
    <string name="app_simple_text">Simple Text Chat</string>
    <string name="file_receive">File Receive</string>
    <string name="text_chat_pro">Text Chat (pro)</string>
    <string name="text_chat_server_next">Text Chat Server: %d ▶</string>
    <string name="text_chat_client_next">Text Chat ▶</string>
    <string name="app_file_receive">File Receive</string>
    <string name="transfer_server">Transit Server (pro)</string>
    <string name="image_preview">Image Preview (pro)</string>
    <string name="video_playback">Video Playback (pro)</string>
    <string name="select_files_to_send">Select files to send</string>
    <string name="empty_file_hint">No files yet, share from gallery,\nfile manager or other apps</string>
    <string name="send_success_fmt">%s sent successfully!</string>
    <string name="inactivity_message">The app has automatically exited due to inactivity.</string>

    <string name="server">Server</string>
    <string name="select_images">Select Images</string>
    <string name="select_videos">Select Videos</string>
    <string name="select_files">Select Files</string>
    <string name="send">Send</string>
    <string name="as_server">As Server</string>
    <string name="as_client">As Client</string>
    <string name="textchat_selector_desc">Select your Text Chat mode.</string>
    <string name="textchat_input_ipport_title">Please input Server\'s ip and port.</string>
    <string name="port_m">Port: </string>
    <string name="something_error">Something error.</string>
    <string name="someone_online">%s is online.</string>
    <string name="someone_offline">%s is offline.</string>
    <string name="server_is_closed">Server is closed!</string>
    <string name="server_is_not_textchat">Server is not \"Text Chat\" mode!</string>
    <string name="server_not_support">Not support.</string>

</resources>