<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:minHeight="210dp"
    tools:context="com.allan.mydroid.views.send.SendListSelectorDialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_marginVertical="4dp"
        app:layout_constraintBottom_toTopOf="@id/infoText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.au.module_android.widget.CustomFontText
        android:id="@+id/disclaimerTv"
        style="@style/StyleFontText"
        android:text="@string/disclaimer_content"
        android:layout_marginVertical="4dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/ui_padding_edge"
        app:layout_constraintBottom_toTopOf="@id/infoText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0dp" />

    <com.au.module_android.widget.CustomFontText
        android:id="@+id/empty"
        android:visibility="gone"
        android:text="@string/empty_file_hint"
        style="@style/StyleFontSecondaryText"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="@dimen/ui_padding_edge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/infoText"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <com.au.module_android.widget.CustomFontTextlink
        android:id="@+id/infoText"
        android:layout_marginHorizontal="@dimen/ui_padding_edge"
        style="@style/StyleFontSecondTitleText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        android:textSize="13sp"
        android:text="@string/disclaimer_title"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>