<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.au.module_android.widget.CustomFontText
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="12dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <com.au.module_android.widget.BgBuildLinearLayout
            android:id="@+id/logicBtnsHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:backgroundNormal="@color/color_normal_block2"
            app:cornerRadius="24dp">

            <com.au.module_android.widget.CustomButton
                android:elevation="4dp"
                android:id="@+id/receiveFileLogicBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:text="@string/file_receive"
                android:textColor="#ffffff"
                android:textSize="21sp"
                app:backgroundNormal="@color/logic_receiver"
                app:cornerRadius="16dp" />

            <com.au.module_android.widget.CustomButton
                android:elevation="4dp"
                android:id="@+id/sendFileLogicBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/file_send"
                android:textColor="#ffffff"
                android:textSize="21sp"
                app:backgroundNormal="@color/logic_send"
                app:cornerRadius="16dp" />

            <com.au.module_android.widget.CustomButton
                android:elevation="4dp"
                android:id="@+id/middleLogicBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/transfer_server"
                android:textColor="#ffffff"
                android:textSize="21sp"
                app:backgroundNormal="@color/logic_middle"
                app:cornerRadius="16dp" />

            <com.au.module_android.widget.CustomButton
                android:elevation="4dp"
                android:id="@+id/seeImageBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/image_preview"
                android:textColor="#ffffff"
                android:textSize="21sp"
                app:backgroundNormal="@color/logic_watch_picture"
                app:cornerRadius="16dp" />

            <com.au.module_android.widget.CustomButton
                android:elevation="4dp"
                android:id="@+id/seeVideoBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/video_playback"
                android:textColor="#ffffff"
                android:textSize="21sp"
                app:backgroundNormal="@color/logic_watch_video"
                app:cornerRadius="16dp" />

            <com.au.module_android.widget.CustomButton
                android:elevation="4dp"
                android:id="@+id/textChatBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:text="@string/text_chat_pro"
                android:textColor="#ffffff"
                android:textSize="21sp"
                app:backgroundNormal="@color/logic_text_chat_server"
                app:cornerRadius="16dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="21dp"/>
        </com.au.module_android.widget.BgBuildLinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>