<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/descTitle"
        android:background="@color/logic_text_chat_server"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.au.module_android.widget.CustomToolbar
        android:id="@+id/toolbar"
        tools:title="text_chat_next"
        app:titleCentered="true"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#ffffff"
        app:navigationIcon="@drawable/icon_back"
        app:navigationIconTint="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <View
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        android:id="@+id/toolbarCenter"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <com.au.module_android.widget.CustomFontText
        android:id="@+id/descTitle"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        style="@style/StyleFontSecondTitleText"
        android:textColor="#ffffff"
        android:textSize="13sp"
        android:maxLines="2"
        tools:text="不退出，不熄屏"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="26dp"/>

    <com.au.module_androidui.widget.ShineView
        android:id="@+id/adHost"
        app:layout_constraintTop_toBottomOf="@id/descTitle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/color_normal_block2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        app:layout_constraintTop_toBottomOf="@id/adHost"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomHost"
        android:paddingBottom="12dp"
        android:paddingTop="16dp"
        android:background="@color/color_normal_block"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.au.module_android.widget.BgBuildCustomFontText
            android:id="@+id/enterBtn"
            android:paddingHorizontal="6dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:backgroundNormal="@color/colorPrimary"
            app:cornerRadius="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:minWidth="80dp"
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="42dp" />

        <com.au.module_android.widget.AutoResizeEditText
            android:id="@+id/edit"
            style="@style/StyleBlankEditText"
            android:paddingHorizontal="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/enterBtn"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="2sp"
            android:maxLines="999"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="42dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sendListBtn"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:contentDescription="@string/send_list"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_send_list"
            android:tint="@color/logic_send"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectImagesBtn"
            android:contentDescription="@string/select_images"
            android:layout_marginTop="9dp"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintStart_toEndOf="@id/sendListBtn"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_filetype_image"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectVideoBtn"
            android:layout_marginTop="9dp"
            android:contentDescription="@string/select_videos"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintStart_toEndOf="@id/selectImagesBtn"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_filetype_video"
            android:layout_width="33dp"
            android:layout_height="33dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/selectFileBtn"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/select_videos"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintStart_toEndOf="@id/selectVideoBtn"
            android:layout_marginStart="14dp"
            android:src="@drawable/ic_file"
            android:layout_width="33dp"
            android:layout_height="33dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>